# scaraplate-example-template

./: .gitignore  .travis.yml  Makefile  README.md  cookiecutter.json  scaraplate.yaml
.github/workflows/: ci.yml
hooks/: post_gen_project.py
{{cookiecutter.project_dest}}/: .gitignore  MANIFEST.in  Makefile  Makefile.inc  README.md  setup.cfg
{{cookiecutter.project_dest}}/tests/: test_metadata.py
