[coverage:run]
branch = True
source =
    src
    tests

[coverage:report]
exclude_lines =
    @abc.abstractmethod
    @abc.abstractproperty
    CancelledError
    NotImplementedError
    pragma: no cover
    __repr__
    __str__
fail_under = {{ cookiecutter.coverage_fail_under }}
precision = 2
show_missing = True

[flake8]
# See https://github.com/ambv/black for details on the ignored rules.
# E203 -- spaces around slices -- PEP-8 recommendation, enforced by black.
# W503 -- line break before binary operator -- PEP-8 recommendation, enforced by black.
ignore = E203,W503
max-line-length = 88

[isort]
atomic = true
default_section = THIRDPARTY
force_grid_wrap = 0
include_trailing_comma = true
indent = '    '
known_first_party = {{ cookiecutter.python_package }}
known_third_party =
line_length = 88
lines_after_imports = 2
multi_line_output = 3
not_skip = __init__.py
order_by_type = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses = True

[metadata]
author = {{ cookiecutter.metadata_author }}
author_email = {{ cookiecutter.metadata_author_email }}
description = {{ cookiecutter.metadata_description }}
long_description = {{ cookiecutter.metadata_long_description }}
name = {{ cookiecutter.metadata_name }}
url = {{ cookiecutter.metadata_url }}
version =

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
develop =
    black
    coverage
    flake8
    isort
{%- if cookiecutter.mypy_enabled == "1" %}
    mypy
{%- endif %}
    pytest

[options.packages.find]
where = src
