[coverage:run]
branch = True
source =
    src
    tests

[coverage:report]
exclude_lines =
    @abc.abstractmethod
    @abc.abstractproperty
    CancelledError
    NotImplementedError
    pragma: no cover
    __repr__
    __str__
fail_under = {{ cookiecutter.coverage_fail_under }}
precision = 2
show_missing = True

[flake8]
# See https://github.com/ambv/black for details on the ignored rules.
# E203 -- spaces around slices -- PEP-8 recommendation, enforced by black.
# W503 -- line break before binary operator -- PEP-8 recommendation, enforced by black.
ignore = E203,W503
max-line-length = 88

[isort]
known_first_party = {{ cookiecutter.python_package }}
multi_line_output = 3
profile = black

[metadata]
author = {{ cookiecutter.metadata_author }}
author_email = {{ cookiecutter.metadata_author_email }}
description = {{ cookiecutter.metadata_description }}
long_description = {{ cookiecutter.metadata_long_description }}
name = {{ cookiecutter.metadata_name }}
url = {{ cookiecutter.metadata_url }}
version =

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.extras_require]
develop =
    black
    coverage
    flake8
    isort
{%- if cookiecutter.mypy_enabled == "1" %}
    mypy
{%- endif %}
    pytest
{%- if cookiecutter.mypy_enabled == "1" %}
    types-setuptools
{%- endif %}

[options.packages.find]
where = src
